@@ -17,9 +17,9 @@ files[] = includes/DrupalOAuthConsumer.inc
 files[] = includes/DrupalOAuthClient.inc
 files[] = includes/OAuthSignatureMethod_HMAC.inc
 
-; Information added by Drupal.org packaging script on 2014-01-24
-version = "7.x-3.2"
+; Information added by Drupal.org packaging script on 2017-01-25
+version = "7.x-3.3"
 core = "7.x"
 project = "oauth"
-datestamp = "1390561406"
+datestamp = "1485375790"
 
